Changes for Json serialization

--- a/AddHost/AddHost.csproj
+++ b/AddHost/AddHost.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataImporter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
